lib_LIBRARIES = libgmml.a
libgmml_a_SOURCES =                                        \
  amber_top_builder.cc                                     \
  amber_top_file.cc                                        \
  boxed_structure.cc                                       \
  coordinate_file.cc                                       \
  environment.cc                                           \
  generic_type.cc                                          \
  glycam_code_set.cc                                       \
  glycam_parser.cc                                         \
  graph.cc                                                 \
  library_file.cc                                          \
  parameter_file.cc                                        \
  pdb_file_builder.cc                                      \
  pdb_file.cc                                              \
  prep_file.cc                                             \
  sander_minimize.cc                                       \
  solvated_structure.cc                                    \
  structure.cc                                             \
  torsion_combination_builder.cc                           \
  utilities.cc
libgmml_a_CPPFLAGS = -I$(top_srcdir)/include

MAINTAINERCLEANFILES = Makefile.in
